<resources>
    <string name="app_name">Amfi</string>
    <string name="app_nick_name">amfi</string>
    <string name="helpful">Helpful?</string>

    <string name="next">NEXT</string>
    <string name="logout">LOGOUT</string>
    <string name="login">LOGIN</string>
    <string name="done">DONE</string>

    <string name="nearest">NEAREST</string>
    <string name="filter">FILTER</string>
    <string name="reset">RESET</string>
    <string name="add_new">ADD NEW</string>

    <string name="skip">SKIP</string>
    <string name="location">LOCATION</string>
    <string name="login_with">Login With</string>

    <string name="no_posts_yet">No posts yet, be the first one to post!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_location_question">Add Location?</string>
    <string name="adding_location">Adding Location</string>
    <string name="please_wait">Please Wait &#8230;&#8230;&#8230;</string>

    <string name="both">Both</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="about_to_add_location">You are about to add the location</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_image_question">Delete Image?</string>
    <string name="delete_image_detailed_qn">Are you sure you want to delete this image?
        This action is irreversible.</string>

    <string name="login_required">Login to amfi</string>
    <string name="login_required_message">You need to login to perform this action.
        Would you like to login amfi?</string>
    <string name="go_to_login">GO TO LOGIN</string>

    <string name="locations_added">Locations Added</string>
    <string name="ratings_added">Locations Rated</string>
    <string name="posts_added">Posts Added</string>
    <string name="photos_added">Photos Added</string>
    <string name="reputation">Reputation</string>
    <string name="banned">Banned</string>

    <string name="gender">Gender</string>
    <string name="locations">Locations</string>

    <string name="all">All</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>

    <string name="star_5">5&#9733;</string>
    <string name="star_4">4&#9733;</string>
    <string name="star_3">3&#9733;</string>
    <string name="star_2">2&#9733;</string>
    <string name="star_1">1&#9733;</string>

    <string name="view_activity">VIEW ACTIVITY</string>
    <string name="rate_to_verify">Not yet verified. Rate or comment to verify.</string>
    <string name="is_verified">Verified by other users.</string>
</resources>
